<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/Bg_blue"
    tools:context="com.balloonoffice.balloonapp.ProductCategory">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">


        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/quicksearch"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:visibility="gone"
            android:id="@+id/textview_filter" />

        <ListView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="8.3"
            android:id="@+id/product_category" />



        <Button
            android:id="@+id/btn_viewproduct"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:text="@string/text_btn_search"
            android:layout_height="0dp"
            android:onClick="search"/>


    </LinearLayout>


    <ProgressBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/progressBar_product"
        android:layout_alignParentBottom="false"
        android:layout_alignWithParentIfMissing="false"
        android:layout_centerInParent="true"
        android:layout_gravity="center" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/reloadlist"
        android:layout_gravity="center"
        android:onClick="reloadlist"
        android:id="@+id/btn_reload"
        android:visibility="gone" />

</FrameLayout>
