<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:orientation="vertical"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:background="@color/Bg_blue"
    tools:context="com.balloonoffice.balloonapp.InputData">


    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/produc_img"
        android:contentDescription="Product Image"
        android:background="@color/White"
        android:minWidth="120dp"
        android:minHeight="120dp"
        android:layout_marginBottom="@dimen/activity_vertical_margin" />


    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/text_inputdata_code"
             />

        <TextView android:text="@string/hello_world"
            android:layout_width="0dp"
            android:layout_weight="8"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:layout_height="wrap_content" android:id="@+id/input_inputdata_code"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            />

    </LinearLayout>


    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/text_inputdata_title"
             />

        <TextView android:text="@string/hello_world" android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="8"
            android:id="@+id/input_inputdata_title"
            android:layout_marginBottom="@dimen/activity_vertical_margin" />

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:inputType="number"
            android:ems="10"
            android:id="@+id/quantity" />
        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:id="@+id/btn_submit"
            android:text="@string/text_submit"
            android:onClick="update"/>

    </LinearLayout>


</LinearLayout>
